# CppTimer

./: CMakeLists.txt  README.md
CppTimer.Tests/: CMakeLists.txt
CppTimer.Tests/Src/: CMakeLists.txt  Makefile  cmake_install.cmake
CppTimer.Tests/Src/Internal/: TimerTests.cpp
Include/: CommonConfig.hpp
Include/Exceptions/: XArgumentNull.hpp  XBaseException.hpp  XInvalidArgument.hpp  XInvalidOperation.hpp  XInvalidTimerConfig.hpp
Include/Interfaces/: IProgram.hpp  IStateFulTimer.hpp  ITimer.hpp
Include/Interfaces/Factories/: IGenericObjectFactoryT.hpp  IObjectFactories.hpp
Include/Internal/: ObjectFactory.hpp  Program.hpp  Timer.hpp  TimerCallbackTypes.hpp
Include/Internal/Entities/: TimerConfig.hpp
Include/Internal/Enums/: TimerMode.hpp  TimerModes.hpp
Src/: CMakeLists.txt  main.cpp
Src/Internal/: ObjectFactory.cpp  Program.cpp  Timer.cpp
